samples/_failures_safe/1761556820_364e7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_203b35ba.c: In function ‘main’:
./samples/SAFE/__tmp_203b35ba.c:136:17: error: expected expression at end of input
  136 |                 if (
      |                 ^~
./samples/SAFE/__tmp_203b35ba.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_203b35ba.c:136:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_203b35ba.c:136:17: error: expected declaration or statement at end of input
